--- a/LoginApp/Storyboards/Base.lproj/Main.storyboard
+++ b/LoginApp/Storyboards/Base.lproj/Main.storyboard
@@ -166,14 +166,14 @@
                     </tabBar>
                     <connections>
                         <segue destination="UJL-gO-eTv" kind="relationship" relationship="viewControllers" id="uBM-M4-Ikb"/>
-                        <segue destination="7FL-yG-tAQ" kind="relationship" relationship="viewControllers" id="2KW-d3-Pdv"/>
+                        <segue destination="xqO-Ly-QLB" kind="relationship" relationship="viewControllers" id="2KW-d3-Pdv"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PvD-8d-wcv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="768.75" y="3.1690140845070425"/>
         </scene>
-        <!--Profile-->
+        <!--Profile View Controller-->
         <scene sceneID="AUb-14-Cau">
             <objects>
                 <viewController id="7FL-yG-tAQ" customClass="ProfileViewController" customModule="LoginApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -183,11 +183,30 @@
                         <viewLayoutGuide key="safeArea" id="IXb-g5-4id"/>
                         <color key="backgroundColor" systemColor="systemOrangeColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Profile" image="person.fill" catalog="system" id="Zen-nW-fwm"/>
+                    <navigationItem key="navigationItem" id="RA6-GS-Cai"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="673-Yb-0ol" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1554" y="913"/>
+            <point key="canvasLocation" x="2550" y="912.67605633802816"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="dqQ-Ef-1Ld">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xqO-Ly-QLB" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profile" image="person.fill" catalog="system" id="Zen-nW-fwm"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="PGG-VH-owx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="7FL-yG-tAQ" kind="relationship" relationship="rootViewController" id="dkt-e3-cZv"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iKN-lM-f1L" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1552.5" y="912.67605633802816"/>
         </scene>
     </scenes>
     <resources>
